--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "url-shortner practice",
   "main": "index.js",
   "scripts": {
-    "test": "jest --detectOpenHandles"
+    "test": "jest --detectOpenHandles",
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "sequelize": "^5.21.3"
+    "sequelize": "^5.21.3",
+    "uuid": "^3.3.3"
   },
   "devDependencies": {
     "jest": "^24.9.0",
