--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "express": "^4.17.1",
     "sequelize": "^5.21.3",
+    "swagger-jsdoc": "^3.5.0",
+    "swagger-ui-express": "^4.1.2",
     "uuid": "^3.3.3"
   },
   "devDependencies": {
